version 4.0.0
-------------
Remove dependency on C# .dll.

version 3.2.2
-------------
* Remove license, icon and release notes from vsix project editor

version 3.2.1
--------------
* Remove package id field from manifest

version 3.0.18
--------------
* Consolidate all buildox modules into one.

 version 2.0.2
-------------
* Remove winscp module.
* Remove flyway module.
* Remove wawsdploy module.
* Move wawsdeploy and flyway cmdlets to the utils module.

version 1.5.2
* Rename namespaces.

version 1.5.1
-------------
* Add Get-BranchSuffix cmdlet.

version 1.4.1
-------------
* Add Find-MSBuildPath cmdlet.

version 1.3.9
-------------
* Add ability to parse settings file where the values are nested within another object.

version 1.2.8
-------------
* Add Write-LineBreak cmdlet
* Add Show-Inputbox cmdlet

Fixes
* Stop DotNetCoreProjectFileHandler from append the version suffix.
* Stop Update-VersionNumber from saving the config file after it made a commit.

version 1.1.2
-------------
* Fix semver settings file not being saved when a custom file is used.

version 1.1.1
-------------
* Add UsecommitMessageAsDescription switch to Update-VersionNumber cmdlet

version: 1.0.1
----------------
* Add utils modules

Changes
* Rename VersionInfo.ReleaseTag field to 'Suffix"
* Rename Settings.ReleaseTag to 'branchSuffixMap'

version: 0.1.111
----------------
* Add flyway module
* Add winscp module
* Add waswsdeploy module
* Add semver module

version: 0.0.1
--------------
Initial release