@@ -1,33 +1,32 @@
+<#
+.SYNOPSIS
+Install the wawsdeploy command-line tool from 'https://chocolatey.org/' to the specified directory.
+
+.DESCRIPTION
+This function will install the wawsdeploy command-line tool from 'https://chocolatey.org/' to the specified directory. Returns the full path of the WAWSDeploy executable.
+
+.PARAMETER InstallationDirectory
+The installation folder.
+
+.PARAMETER Version
+The version number. (default: 1.8.0).
+
+.EXAMPLE
+Install-WawsDeploy "C:\temp";
+In this example, the wawsdeploy cli is downloaded into a temp directory.
+
+.EXAMPLE
+Install-WawsDeploy;
+In this example, the wawsdeploy cli is downloaded into the current directory.
+
+.LINK
+https://chocolatey.org/packages/WAWSDeploy
+
+.LINK
+https://github.com/davidebbo/WAWSDeploy
+#>
 function Install-WAWSDeploy()
 {
-	<#
-	.SYNOPSIS
-	Install the wawsdeploy command-line tool from 'https://chocolatey.org/' to the specified directory.
-
-	.DESCRIPTION
-	This function will install the wawsdeploy command-line tool from 'https://chocolatey.org/' to the specified directory. Returns the full path of the WAWSDeploy executable.
-
-	.PARAMETER InstallationDirectory
-	The installation folder.
-
-	.PARAMETER Version
-	The version number. (default: 1.8.0).
-
-	.EXAMPLE
-	Install-WawsDeploy "C:\temp";
-	In this example, the wawsdeploy cli is downloaded into a temp directory.
-
-	.EXAMPLE
-	Install-WawsDeploy;
-	In this example, the wawsdeploy cli is downloaded into the current directory.
-
-	.LINK
-	https://chocolatey.org/packages/WAWSDeploy
-	
-	.LINK
-	https://github.com/davidebbo/WAWSDeploy
-	#>
-
 	Param(
 		[Alias("path", "dir", "p")]
 		[Parameter(ValueFromPipeline)]
