@@ -3,18 +3,16 @@
 This cmdlet outputs a line seperator to the console.
 
 .PARAMETER Title
-An optional string of text to embed into the 
+An optional string of text to embed into the
 #>
-function Write-LineBreak([string]$Title = "") {
-	
-
-	$line = "`n----------------------------------------------------------------------";
-	$limit = $line.Length;
+function Write-LineBreak([string]$Title = "", [int]$length = 70)
+{
+	$line = [string]::Join('', [System.Linq.Enumerable]::Repeat('-', $length));
 	if (-not [String]::IsNullOrEmpty($Title))
 	{
 		$line = $line.Insert(4, " $Title ");
-		if ($line.Length -gt $limit) { $line = $line.Substring(0, $limit); }
+		if ($line.Length -gt $length) { $line = $line.Substring(0, $length); }
 	}
 
-	Write-Host $line; Write-Host "";
+	Write-Host ''; Write-Host $line; Write-Host '';
 }
