@@ -1,9 +1,9 @@
-#
+﻿#
 # Module manifest for module 'PSGet_mock'
 #
 # Generated by: Ackara
 #
-# Generated on: 12/23/2017
+# 
 #
 
 @{
@@ -123,4 +123,5 @@ PrivateData = @{
 # DefaultCommandPrefix = ''
 
 }
+
 
